Disable shared libraries for libmesh.

--- a/libmesh/Dockerfile
+++ b/libmesh/Dockerfile
@@ -24,6 +24,7 @@ RUN cd /tmp && \
                  --enable-vtk \
                  --with-vtk-include=$VTK_DIR/include/vtk-8.1 \
                  --with-vtk-lib=$VTK_DIR/lib \
+                 --disable-shared \
                  --disable-eigen \
                  --with-cxx=mpicxx \
                  --with-metis=PETSc && \
