--- a/vtk/Dockerfile
+++ b/vtk/Dockerfile
@@ -1,10 +1,10 @@
 ARG TAG=latest
 FROM ataber/cmake:$TAG
 
-ARG VTK_MAJOR_VERSION=8
-ARG VTK_MINOR_VERSION=1
-ARG VTK_PATCH_VERSION=2
-ARG VTK_VERSION=$VTK_MAJOR_VERSION.$VTK_MINOR_VERSION.$VTK_PATCH_VERSION
+ENV VTK_MAJOR_VERSION=8
+ENV VTK_MINOR_VERSION=1
+ENV VTK_PATCH_VERSION=2
+ENV VTK_VERSION=$VTK_MAJOR_VERSION.$VTK_MINOR_VERSION.$VTK_PATCH_VERSION
 
 RUN cd /tmp && \
     wget -nv -O- http://www.vtk.org/files/release/$VTK_MAJOR_VERSION.$VTK_MINOR_VERSION/VTK-$VTK_VERSION.tar.gz | \
