Whoops, should be this variable instead

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,7 +19,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
         -DMFEM_USE_MPI=YES \
-        -DSHARED=YES \
+        -DBUILD_SHARED_LIBS=1 \
         -DVERBOSE=YES && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
