Still need to source bashrc to get wmake binary

--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -23,6 +23,7 @@ RUN mkdir -p /tmp && cd /tmp && \
     git clone https://github.com/OpenFOAM/OpenFOAM-dev.git && \
     git clone https://github.com/OpenFOAM/ThirdParty-dev.git && \
     echo "source /tmp/OpenFOAM-dev/etc/bashrc" >> ~/.bashrc && \
+    /bin/sh /tmp/OpenFOAM-dev/etc/bashrc && \
     (cd ThirdParty-dev && ./Allwmake -j $(cat /proc/cpuinfo | grep processor | wc -l)) && \
     (cd OpenFOAM-dev && ./Allwmake -j $(cat /proc/cpuinfo | grep processor | wc -l)) && \
     cd /tmp && rm -rf OpenFOAM-dev && rm -rf ThirdParty-dev
