--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update --fix-missing \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
+ENV WM_PROJECT_DIR /tmp/OpenFOAM-dev
 RUN mkdir -p /tmp && cd /tmp && \
     git clone https://github.com/OpenFOAM/OpenFOAM-dev.git && \
     git clone https://github.com/OpenFOAM/ThirdParty-dev.git && \
