Try to hack around OpenFOAM directory bug.

--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -19,12 +19,15 @@ RUN apt-get update --fix-missing \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
-ENV WM_PROJECT_DIR /tmp/OpenFOAM-dev
-RUN mkdir -p /tmp && cd /tmp && \
+ARG HOME_SCRATCH=$HOME
+# Hack to get OpenFOAM acknowledging correct directory.
+ENV HOME /tmp
+RUN mkdir -p /tmp/OpenFOAM && cd /tmp/OpenFOAM && \
     git clone https://github.com/OpenFOAM/OpenFOAM-dev.git && \
     git clone https://github.com/OpenFOAM/ThirdParty-dev.git && \
     echo "source /tmp/OpenFOAM-dev/etc/bashrc" >> ~/.bashrc && \
-    /bin/sh /tmp/OpenFOAM-dev/etc/bashrc && \
+    /bin/sh /tmp/OpenFOAM/OpenFOAM-dev/etc/bashrc && \
     (cd ThirdParty-dev && ./Allwmake -j $(cat /proc/cpuinfo | grep processor | wc -l)) && \
     (cd OpenFOAM-dev && ./Allwmake -j $(cat /proc/cpuinfo | grep processor | wc -l)) && \
-    cd /tmp && rm -rf OpenFOAM-dev && rm -rf ThirdParty-dev
+    cd /tmp && rm -rf OpenFOAM
+ENV HOME $HOME_SCRATCH
