--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -16,6 +16,8 @@ RUN apt-get update --fix-missing \
     libreadline-dev \
     libncurses-dev \
     libxt-dev \
+    libopenmpi-dev \
+    openmpi-bin \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
