Fix syntax error.

--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -4,6 +4,6 @@ FROM ataber/vtk:$TAG
 RUN apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
 &&  apt-get install -y --force-yes \
-    openfoam6
+    openfoam6 \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
