Add openfoam apt-get repo.

--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -1,6 +1,8 @@
 ARG TAG=latest
 FROM ataber/vtk:$TAG
 
+RUN /bin/sh -c "wget -O - http://dl.openfoam.org/gpg.key | apt-key add -" && \
+    add-apt-repository http://dl.openfoam.org/ubuntu
 RUN apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
 &&  apt-get install -y --force-yes openfoam6 \
