Copy-paste from ruby-bionic Dockerfile (FIXME)

--- a/circleci/Dockerfile
+++ b/circleci/Dockerfile
@@ -18,92 +18,81 @@ RUN apt-get update \
         zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
+## Copy-pasted from https://github.com/docker-library/ruby/blob/ccacdf5eb9e69b6f249a890c87621679410e7d74/2.5/stretch/Dockerfile
+
 # skip installing gem documentation
 RUN mkdir -p /usr/local/etc \
-    && { \
-        echo 'install: --no-document'; \
-        echo 'update: --no-document'; \
-    } >> /usr/local/etc/gemrc
+  && { \
+    echo 'install: --no-document'; \
+    echo 'update: --no-document'; \
+  } >> /usr/local/etc/gemrc
 
-ENV RUBY_MAJOR 2.5
-ENV RUBY_VERSION 2.5.3
-ENV RUBYGEMS_VERSION 2.7.6
-ENV BUNDLER_VERSION 1.16.1
+ENV RUBY_MAJOR 2.6
+ENV RUBY_VERSION 2.6.1
+ENV RUBY_DOWNLOAD_SHA256 47b629808e9fd44ce1f760cdf3ed14875fc9b19d4f334e82e2cf25cb2898f2f2
+ENV RUBYGEMS_VERSION 3.0.2
+ENV BUNDLER_VERSION 1.17.3
 
 # some of ruby's build scripts are written in ruby
+#   we purge system ruby later to make sure our final image uses what we just built
 RUN set -ex \
-    \
-    && buildDeps=' \
-        autoconf \
-        bison \
-        dpkg-dev \
-        gcc \
-        libbz2-dev \
-        libgdbm-dev \
-        libglib2.0-dev \
-        libncurses-dev \
-        libreadline-dev \
-        libxml2-dev \
-        libxslt-dev \
-        make \
-        ruby \
-        wget \
-        xz-utils \
-    ' \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends $buildDeps \
-    && rm -rf /var/lib/apt/lists/* \
-    \
-    && wget -O ruby.tar.xz "https://cache.ruby-lang.org/pub/ruby/${RUBY_MAJOR%-rc}/ruby-$RUBY_VERSION.tar.xz" \
-    && mkdir -p /usr/src/ruby \
-    && tar -xJf ruby.tar.xz -C /usr/src/ruby --strip-components=1 \
-    && rm ruby.tar.xz \
-    \
-    && cd /usr/src/ruby \
-    \
+  \
+  && buildDeps=' \
+    bison \
+    dpkg-dev \
+    libgdbm-dev \
+    ruby \
+  ' \
+  && apt-get update \
+  && apt-get install -y --no-install-recommends $buildDeps \
+  && rm -rf /var/lib/apt/lists/* \
+  \
+  && wget -O ruby.tar.xz "https://cache.ruby-lang.org/pub/ruby/$RUBY_MAJOR/ruby-$RUBY_VERSION.tar.xz" \
+  && echo "$RUBY_DOWNLOAD_SHA256 *ruby.tar.xz" | sha256sum -c - \
+  \
+  && mkdir -p /usr/src/ruby \
+  && tar -xJf ruby.tar.xz -C /usr/src/ruby --strip-components=1 \
+  && rm ruby.tar.xz \
+  \
+  && cd /usr/src/ruby \
+  \
 # hack in "ENABLE_PATH_CHECK" disabling to suppress:
 #   warning: Insecure world writable dir
-    && { \
-        echo '#define ENABLE_PATH_CHECK 0'; \
-        echo; \
-        cat file.c; \
-    } > file.c.new \
-    && mv file.c.new file.c \
-    \
-    && autoconf \
-    && gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)" \
-    && ./configure \
-        --build="$gnuArch" \
-        --disable-install-doc \
-        --enable-shared \
-    && make -j "$(nproc)" \
-    && make install \
-    \
-    && dpkg-query --show --showformat '${package}\n' \
-        | grep -P '^libreadline\d+$' \
-        | xargs apt-mark manual \
-    && cd / \
-    && rm -r /usr/src/ruby \
-    \
-    && gem update --system "$RUBYGEMS_VERSION" \
-    && gem install bundler --version "$BUNDLER_VERSION" --force \
-    && rm -r /root/.gem/
-
-# for native extensions
-RUN apt-get update && apt-get install -y build-essential
+  && { \
+    echo '#define ENABLE_PATH_CHECK 0'; \
+    echo; \
+    cat file.c; \
+  } > file.c.new \
+  && mv file.c.new file.c \
+  \
+  && autoconf \
+  && gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)" \
+  && ./configure \
+    --build="$gnuArch" \
+    --disable-install-doc \
+    --enable-shared \
+  && make -j "$(nproc)" \
+  && make install \
+  \
+  && apt-get purge -y --auto-remove $buildDeps \
+  && cd / \
+  && rm -r /usr/src/ruby \
+  \
+  && gem update --system "$RUBYGEMS_VERSION" \
+  && gem install bundler --version "$BUNDLER_VERSION" --force \
+  && rm -r /root/.gem/
 
 # install things globally, for great justice
 # and don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
 ENV BUNDLE_PATH="$GEM_HOME" \
-    BUNDLE_BIN="$GEM_HOME/bin" \
-    BUNDLE_SILENCE_ROOT_WARNING=1 \
-    BUNDLE_APP_CONFIG="$GEM_HOME"
-ENV PATH $BUNDLE_BIN:$PATH
-RUN mkdir -p "$GEM_HOME" "$BUNDLE_BIN" \
-    && chmod 777 "$GEM_HOME" "$BUNDLE_BIN"
-
-RUN gem install bundler
+  BUNDLE_SILENCE_ROOT_WARNING=1 \
+  BUNDLE_APP_CONFIG="$GEM_HOME"
+# path recommendation: https://github.com/bundler/bundler/pull/6469#issuecomment-383235438
+ENV PATH $GEM_HOME/bin:$BUNDLE_PATH/gems/bin:$PATH
+# adjust permissions of a few directories for running "gem install" as an arbitrary user
+RUN mkdir -p "$GEM_HOME" && chmod 777 "$GEM_HOME"
+# (BUNDLE_PATH = GEM_HOME, no need to mkdir/chown both)
 
 # install git-lfs
 RUN add-apt-repository -y ppa:git-core/ppa && \
