Move to Clang-8

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -17,9 +17,9 @@ RUN apt-get update --fix-missing \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
 RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
-    apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-5.0 main" && \
+    apt-add-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-8 main" && \
     apt-get update --fix-missing && \
-    apt-get install -y clang-5.0 && \
+    apt-get install -y clang-8 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -37,8 +37,8 @@ RUN cd /tmp \
     && cd .. \
     && rm -rf cmake*
 
-ENV CC clang-5.0
-ENV CXX clang++-5.0
+ENV CC clang-8
+ENV CXX clang++-8
 ENV MPI_C mpicc
 ENV MPI_CXX mpicxx
 
