Do not use MPI for static libs.

--- a/libmesh/Dockerfile
+++ b/libmesh/Dockerfile
@@ -27,7 +27,7 @@ RUN cd /tmp && \
                  --disable-shared \
                  --enable-all-static \
                  --disable-eigen \
-                 --with-cxx=mpicxx \
+                 --with-cxx=$CXX \
                  --with-metis=PETSc && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
