--- a/dealii/Dockerfile
+++ b/dealii/Dockerfile
@@ -22,7 +22,7 @@ RUN cd /tmp && \
     cmake \
         -DCMAKE_INSTALL_PREFIX=$INSTALL_DIR \
         -DBUILD_SHARED_LIBS=OFF \
-        -DDEAL_II_WITH_MPI=ON \
+        -DDEAL_II_WITH_MPI=OFF \
         -DDEAL_II_WITH_PETSC=ON \
         -DDEAL_II_WITH_SLEPC=ON \
         -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
