--- a/petsc/Dockerfile
+++ b/petsc/Dockerfile
@@ -10,6 +10,8 @@ RUN apt-get update --fix-missing \
     liblapack-dev \
     unzip \
     wget \
+    libopenmpi-dev \
+    openmpi-bin \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
@@ -23,9 +25,17 @@ RUN cd /tmp && \
     --download-scalapack \
     --download-mumps \
     --download-metis \
+    --download-hypre=1  \
+    --download-parmetis \
+    --download-superlu \
+    --download-superlu_dist \
     --prefix=/usr/lib/petsc-$PETSC_VERSION \
     --with-clanguage=C++ \
     --with-debugging=1 \
+    --with-cc=mpicc \
+    --with-cxx=mpicxx \
+    --with-fc=mpif90 \
+    --with-ff=mpif77 \
     --with-mpi=0 \
     --with-shared-libraries=0 \
     --with-x=0 \
@@ -38,3 +48,7 @@ ENV PETSC_DIR /usr/lib/petsc-$PETSC_VERSION
 ENV METIS_DIR $PETSC_DIR
 ENV SCALAPACK_DIR $PETSC_DIR
 ENV MUMPS_DIR $PETSC_DIR
+ENV PARMETIS_DIR $PETSC_DIR
+ENV SUPERLU_DIR $PETSC_DIR
+ENV SUPERLU_DIST_DIR $PETSC_DIR
+ENV HYPRE_DIR $PETSC_DIR
