--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,6 +19,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
         -DMFEM_USE_MPI=YES \
+        -DMFEM_USE_OPENMP=YES \
         -DBUILD_SHARED_LIBS=1 \
         -DVERBOSE=YES && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
