Should be 3.6 dev

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update --fix-missing \
     openmpi-bin \
     google-perftools \
     python3.6 \
-    python-dev \
+    python3.6-dev \
     libgoogle-perftools-dev \
     lldb \
     valgrind \
