Need distutils too

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update --fix-missing \
     google-perftools \
     python3.6 \
     python3.6-dev \
+    python3-distutils \
     libgoogle-perftools-dev \
     lldb \
     valgrind \
