Add python 3 to global dependencies. (#4)
* Add python 3 to cmake dependencies.

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -15,6 +15,9 @@ RUN apt-get update --fix-missing \
     libopenmpi-dev \
     openmpi-bin \
     google-perftools \
+    python3.6 \
+    python3.6-dev \
+    python3-distutils \
     libgoogle-perftools-dev \
     lldb \
     valgrind \
