Revert "Merge branch 'static' into master"
This reverts commit c2ae35c3afee3e19ab8a6421ec1440d5be072d75, reversing
changes made to a6b40b7d45484149204d76ce5897f13aebd622f1.

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update --fix-missing \
     cppcheck \
     doxygen \
     graphviz \
+    libopenmpi-dev \
+    openmpi-bin \
     google-perftools \
     python3.6 \
     python3.6-dev \
@@ -43,8 +45,10 @@ RUN cd /tmp \
     && cd .. \
     && rm -rf cmake*
 
-ENV CC clang-8
-ENV CXX clang++-8
+ENV CC clang-9
+ENV CXX clang++-9
+ENV MPI_C mpicc
+ENV MPI_CXX mpicxx
 
 RUN mkdir /app
 WORKDIR /app
