--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -16,13 +16,13 @@ RUN cd /tmp && \
     cd mfem && \
     mkdir build && \
     cd build && \
-    cmake .. \
+    CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
-        -DMFEM_USE_MPI=OFF \
-        -DBUILD_SHARED_LIBS=OFF \
+        -DMFEM_USE_MPI=YES \
         -DMFEM_USE_OPENMP=YES \
         -DMFEM_USE_LEGACY_OPENMP=YES \
         -DMFEM_THREAD_SAFE=YES \
+        -DBUILD_SHARED_LIBS=1 \
         -DVERBOSE=YES && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
