Use MPI for static libs

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update --fix-missing \
     cppcheck \
     doxygen \
     graphviz \
+    libopenmpi-dev \
+    openmpi-bin \
     google-perftools \
     python3.6 \
     python3.6-dev \
@@ -30,7 +32,7 @@ RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
     rm -rf /var/lib/apt/lists/*
 
 ARG CMAKE_MAJOR_VERSION=3.15
-ARG CMAKE_MINOR_VERSION=4
+ARG CMAKE_MINOR_VERSION=5
 ARG CMAKE_VERSION=$CMAKE_MAJOR_VERSION.$CMAKE_MINOR_VERSION
 
 RUN cd /tmp \
@@ -45,6 +47,8 @@ RUN cd /tmp \
 
 ENV CC clang-9
 ENV CXX clang++-9
+ENV MPI_C mpicc
+ENV MPI_CXX mpicxx
 
 RUN mkdir /app
 WORKDIR /app
