Use PETSC for MFEM.

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,6 +19,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
         -DMFEM_USE_MPI=ON \
+        -DMFEM_USE_PETSC=ON \
         -DBUILD_SHARED_LIBS=OFF \
         -DVERBOSE=YES && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
