Try installing openssl here for CMake.

--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update --fix-missing \
     software-properties-common \
     make \
     build-essential \
+    openssl \
     clang-tidy \
     iwyu \
     cppcheck \
