--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -21,8 +21,7 @@ RUN cd /tmp && \
         -DMFEM_USE_MPI=YES \
         -DMFEM_USE_PETSC=ON \
         -DBUILD_SHARED_LIBS=1 \
-        -DMFEM_USE_METIS=1 \
-        -DVERBOSE=YES && \
+        -DMFEM_USE_METIS=1 && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
     cd /tmp && rm -rf mfem
