Revert previous change, and no longer use PETSC with MFEM for now.

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -18,9 +18,9 @@ RUN cd /tmp && \
     cd build && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
-        -DMFEM_USE_MPI=YES \
-        -DMFEM_USE_PETSC=ON \
-        -DBUILD_SHARED_LIBS=1 \
+        -DMFEM_USE_MPI=ON \
+        -DMFEM_USE_PETSC=OFF \
+        -DBUILD_SHARED_LIBS=ON \
         -DMFEM_USE_METIS=1 && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
