Revert previous change, and no longer use PETSC with MFEM for now.

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,7 +19,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
         -DMFEM_USE_MPI=ON \
-        -DMFEM_USE_PETSC=ON \
+        -DMFEM_USE_PETSC=OFF \
         -DBUILD_SHARED_LIBS=OFF \
         -DMFEM_USE_METIS=1 && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
