--- a/mfem_mkl/Dockerfile
+++ b/mfem_mkl/Dockerfile
@@ -1,6 +1,6 @@
 # https://github.com/docker/for-mac/issues/2155
 ARG TAG=latest
-FROM ataber/intel_mkl:${TAG} as base
+FROM ataber/intel_mkl:${TAG} as intel
 
 FROM ataber/mfem:$TAG
-COPY --from=base /opt/intel /opt/intel
+COPY --from=intel /opt/intel /opt/intel
