Put sourcing of MKL variables directly in users bash profile.

--- a/intel_mkl/Dockerfile
+++ b/intel_mkl/Dockerfile
@@ -20,6 +20,4 @@ RUN cd /tmp && \
   rm -rf /opt/intel/.*.log /opt/intel/compilers_and_libraries_${MKL_VER}/licensing && \
   echo "/opt/intel/mkl/lib/intel64" >> /etc/ld.so.conf.d/intel.conf && \
   ldconfig && \
-  touch /etc/bashrc && \
-  echo "source /opt/intel/mkl/bin/mklvars.sh intel64" >> /etc/bashrc && \
-  echo "source /opt/intel/mkl/bin/mklvars.sh intel64" >> /etc/bash.bashrc
+  echo "source /opt/intel/mkl/bin/mklvars.sh intel64" >> ~/.bash_profile
