Try this to get bashprofile setup.

--- a/mkl_vtk/Dockerfile
+++ b/mkl_vtk/Dockerfile
@@ -4,4 +4,5 @@ FROM ataber/intel_mkl:${TAG} as intel
 
 FROM ataber/vtk:$TAG
 COPY --from=intel /opt/intel /opt/intel
-COPY --from=intel ~/.bash_profile ~/.bash_profile
+COPY --from=intel /etc/bashrc /etc/bashrc
+RUN cat /etc/bashrc >> ~/.bash_profile
