Set this dependency correctly.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -373,6 +373,7 @@ workflows:
       - mkl_vtk:
           requires:
             - vtk
+            - intel_mkl
       - open_foam:
           requires:
             - vtk
