--- a/mkl_vtk/Dockerfile
+++ b/mkl_vtk/Dockerfile
@@ -2,7 +2,7 @@
 ARG TAG=latest
 FROM ataber/intel_mkl:${TAG} as intel
 
-FROM ataber/vtk:$TAG
+FROM ataber/vtk:${TAG}
 COPY --from=intel /opt/intel /opt/intel
 COPY --from=intel /etc/bashrc /etc/bashrc
 RUN cat /etc/bashrc >> ~/.bash_profile
