--- a/mfem_mkl/Dockerfile
+++ b/mfem_mkl/Dockerfile
@@ -2,7 +2,7 @@
 ARG TAG=latest
 FROM ataber/intel_mkl:${TAG} as intel
 
-FROM ataber/mfem:$TAG
+FROM ataber/mfem:${TAG}
 COPY --from=intel /opt/intel /opt/intel
 COPY --from=intel /etc/bashrc /etc/bashrc
 RUN cat /etc/bashrc >> ~/.bash_profile
