Cover both login and non-login variable setup.

--- a/mkl_vtk/Dockerfile
+++ b/mkl_vtk/Dockerfile
@@ -4,5 +4,7 @@ FROM ataber/intel_mkl:${TAG} as intel
 
 FROM ataber/vtk:$TAG
 COPY --from=intel /opt/intel /opt/intel
+# Note we need both bashrc and profile. CircleCI runs non-login shell.
+# https://unix.stackexchange.com/questions/29791/bash-profile-not-sourced-when-running-su
 COPY --from=intel /etc/bashrc /etc/bashrc
-RUN cat /etc/bashrc >> ~/.bashrc
+COPY --from=intel /etc/profile /etc/profile
