Need to fill out the user profile too.

--- a/mfem_mkl/Dockerfile
+++ b/mfem_mkl/Dockerfile
@@ -8,3 +8,5 @@ COPY --from=intel /opt/intel /opt/intel
 # https://unix.stackexchange.com/questions/29791/bash-profile-not-sourced-when-running-su
 COPY --from=intel /etc/bashrc /etc/bashrc
 COPY --from=intel /etc/profile /etc/profile
+RUN cat /etc/bashrc >> ~/.bashrc
+RUN cat /etc/profile >> ~/.bash_profile
