User non-interactive frontend to install openfoam.

--- a/open_foam/Dockerfile
+++ b/open_foam/Dockerfile
@@ -3,7 +3,7 @@ FROM ataber/vtk:$TAG
 
 RUN /bin/sh -c "wget -O - http://dl.openfoam.org/gpg.key | apt-key add -" && \
     add-apt-repository http://dl.openfoam.org/ubuntu
-RUN apt-get update --fix-missing \
+RUN DEBIAN_FRONTEND=noninteractive apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
 &&  apt-get install -y --force-yes openfoam6 \
 &&  apt-get clean \
