--- a/openvdb/Dockerfile
+++ b/openvdb/Dockerfile
@@ -4,6 +4,8 @@ FROM ataber/vtk:$TAG
 RUN DEBIAN_FRONTEND=noninteractive apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
 &&  apt-get install -y \
+    make \
+    build-essential \
     libboost-iostreams-dev \
     libboost-system-dev \
     libtbb-dev \
