Add walberla image.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -385,6 +385,27 @@ jobs:
           paths:
             - branch_cache
 
+  walberla:
+    executor: compiler
+    steps:
+      - checkout
+      - setup_remote_docker:
+          reusable: true
+          exclusive: true
+      - run:
+          name: Install bash
+          command: apk add --no-cache bash
+      - attach_workspace:
+          at: /root/repo/
+      - run:
+          name: Build + deploy image
+          command: ./build-and-deploy-image walberla
+          no_output_timeout: 30m
+      - persist_to_workspace:
+          root: /root/repo
+          paths:
+            - branch_cache
+
 workflows:
   version: 2
   build-images:
@@ -439,3 +460,6 @@ workflows:
       - vtk:
           requires:
             - cmake
+      - walberla:
+          requires:
+            - vtk
