--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -28,13 +28,13 @@ RUN apt-get update --fix-missing \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
 RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
-    apt-add-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main" && \
+    apt-add-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main" && \
     apt-get update --fix-missing && \
-    apt-get install -y clang-9 && \
+    apt-get install -y clang-10 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-ARG CMAKE_MAJOR_VERSION=3.16
+ARG CMAKE_MAJOR_VERSION=3.17
 ARG CMAKE_MINOR_VERSION=2
 ARG CMAKE_VERSION=$CMAKE_MAJOR_VERSION.$CMAKE_MINOR_VERSION
 
@@ -48,8 +48,8 @@ RUN cd /tmp \
     && cd .. \
     && rm -rf cmake*
 
-ENV CC clang-9
-ENV CXX clang++-9
+ENV CC clang-10
+ENV CXX clang++-10
 ENV MPI_C mpicc
 ENV MPI_CXX mpicxx
 
