--- a/petsc/Dockerfile
+++ b/petsc/Dockerfile
@@ -15,13 +15,14 @@ RUN apt-get update --fix-missing \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
-ENV PETSC_VERSION 3.13.1
+ENV PETSC_VERSION 3.13.3
 RUN cd /tmp && \
     wget http://ftp.mcs.anl.gov/pub/petsc/release-snapshots/petsc-lite-$PETSC_VERSION.tar.gz && \
     tar xf petsc-lite-$PETSC_VERSION.tar.gz && rm -f petsc-lite-$PETSC_VERSION.tar.gz && \
     cd petsc-$PETSC_VERSION && \
     ./configure \
-    --download-fblaslapack \
+    --with-blas-lib=libblas.a \
+    --with-lapack-lib=liblapack.a \
     --download-hypre  \
     --download-scalapack \
     --download-mumps \
